# aoe2clone

./: .gitignore  CMakeLists.txt  CMakeListsEmscripten.txt  IMPLEMENTATION_PLAN.md  build_web.sh  imgui.ini  main.cpp  old_main.cpp  shell_minimal.html  vercel.json
docs/: CODEBASE.md
scripts/: fix_main.py  fix_main2.py  refactor.py  refactor_main.py  trim_png_transparency.py
src/Core/: Constants.h  Engine.cpp  Engine.h  Globals.cpp  Globals.h  Types.h
src/Game/: GameLogicHelpers.cpp  GameLogicHelpers.h  GameLoop.cpp  GameLoop.h  Pathfinding.cpp  Pathfinding.h
src/Graphics/: RendererHelpers.cpp  RendererHelpers.h
src/Math/: CoordinateSystem.cpp  CoordinateSystem.h
src/shaders/: overlay.fs  overlay.vs  sprite.fs  sprite.vs  tile.fs  tile.vs
tests/: CoordinateSystem_test.cpp  GameLogicHelpers_test.cpp  Pathfinding_test.cpp
web/: CMakeLists.txt  pre.js
